# raven-matrix

./: .gitignore  .gitmodules  CLAUDE.md  README.md  app.py  pyproject.toml
.ed3d/: merge-policy
.github/workflows/: ci.yml  pages.yml
data/: ravens_oracle.csv
docs/: compat-registry.md  dependency-rationale.md  oracle_exclusions.md
docs/architecture/: constraints.md  glossary.md  personae.md
docs/architecture/decisions/: 0001-renderer-uniform-base-shape-size.md  0002-supplemental-led-constant-carrier.md
docs/architecture/dfd/: 0-context-diagram.md
docs/design-plans/: 2026-06-08-raven-builder.md
docs/implementation-plans/2026-06-08-raven-builder/: RESUME.md  code-review-findings-phase-1.md  code-review-findings-phase-3.md  code-review-findings-phase-4.md  code-review-findings-phase-5.md  code-review-findings-phase-6.md  code-review-findings-phase-7-task-3.md  code-review-findings-phase-7.md  code-review-findings-plan-validation.md  code-review-findings-pre-merge.md  critical-peer-review-findings-round2.md  critical-peer-review-findings.md  phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  phase_07.md  phase_08.md  test-requirements.md  uat-requirements.md
docs/spikes/: golden-fixtures.md  java-build-spike.md
docs/upstream-analysis/: bug-catalog.md  port-spec.md
reference/sgmt-source/: PORT-NOTES.md  README.md
src/raven_matrix/: __init__.py  appsupport.py  builder.py  cli.py  compat.py  fillpattern.py  label.py  model.py  oracle.py  rng.py  surface.py  ui_config.py
src/raven_matrix/render/: __init__.py  raster.py  svg.py
src/raven_matrix/structure/: __init__.py  base.py  supplemental.py
src/raven_matrix/transforms/: __init__.py  base.py  geometric.py  logic.py
tests/: test_app_importable.py  test_appsupport.py  test_builder_answers.py  test_builder_build.py  test_builder_layers.py  test_cli.py  test_compat_registry.py  test_constant_carrier.py  test_fillpattern.py  test_hand_derived_labels.py  test_label.py  test_model_features.py  test_model_values.py  test_oracle_data.py  test_oracle_sweep.py  test_parse_code.py  test_render_raster.py  test_render_svg_cells.py  test_render_svg_documents.py  test_rng.py  test_smoke.py  test_structure_base.py  test_structure_supplemental.py  test_surface.py  test_transforms_axis.py  test_transforms_corner_out.py  test_transforms_diagonal.py  test_transforms_factory.py  test_transforms_logic.py  test_ui_config.py  test_wasm_bootstrap.py
tests/data/: __init__.py  hand_derived_labels.py
tests/golden/: fill_patterns.json  javarandom_vectors.json  sgmt_matrices.json
tools/: README.md  extract_oracle.py  extract_upstream.sh  render_preview.py
tools/golden/: FillDump.java  JavaRandomDump.java  SgmtDump.java  regenerate.sh
