[project]
name = "raven-matrix"
version = "0.1.0"
description = "Python 3.14 port of the Sandia Generated Matrix Tool — generates Raven-style progressive-matrix puzzles with normed difficulty"
readme = "README.md"
# Floor is the Pyodide-installable version (NOT 3.14): the WASM runtime (Phase 8)
# lags CPython, and micropip honours requires-python — a >=3.14 wheel would refuse
# to install in-browser. Dev runs 3.14 (.python-version); the package stays
# 3.12-compatible so the wheel loads under Pyodide. Confirm/raise the floor against
# the actual Pyodide version in Phase 8.
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
raster = []            # SVG→PNG backend chosen in Phase 6
ui = ["marimo"]        # Phase 7 reactive app
cli = ["typer"]        # Phase 7 CLI
difficulty = []        # reserved — Phase-later difficulty classifier

[project.scripts]
# raven-matrix CLI entry point is wired in Phase 7 (cli extra)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raven_matrix"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "hypothesis>=6",
    "xlrd>=2.0",        # dev-only: reads the .xls oracle source (Task 4)
    "ty==0.0.42",       # exact-pinned: pre-1.0, gated in CI (resolved by uv)
]

[tool.ruff]
line-length = 88
target-version = "py312"   # keep the whole package Pyodide-compatible (see requires-python)
src = ["src", "tests", "tools"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ty.environment]
python-version = "3.12"   # type-check against the supported floor, not the dev version

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
