[project]
name = "raven-matrix"
version = "0.1.0"
description = "Python 3.14 port of the Sandia Generated Matrix Tool — generates Raven-style progressive-matrix puzzles with normed difficulty"
readme = "README.md"
# Floor is the Pyodide-installable version (NOT 3.14): the WASM runtime (Phase 8)
# lags CPython, and micropip honours requires-python — a >=3.14 wheel would refuse
# to install in-browser. Dev runs 3.14 (.python-version); the package stays
# 3.12-compatible so the wheel loads under Pyodide. Confirm/raise the floor against
# the actual Pyodide version in Phase 8.
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
raster = ["resvg-py>=0.3.2"]   # SVG→PNG backend (Phase 6); floor = the version uv resolves
ui = ["marimo"]        # Phase 7 reactive app
cli = ["typer"]        # Phase 7 CLI
difficulty = []        # reserved — Phase-later difficulty classifier

[project.scripts]
raven-matrix = "raven_matrix.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raven_matrix"]

[tool.hatch.build.targets.wheel.force-include]
"data/ravens_oracle.csv" = "raven_matrix/data/ravens_oracle.csv"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "hypothesis>=6",
    "xlrd>=2.0",        # dev-only: reads the .xls oracle source (Task 4)
    "ty==0.0.42",       # exact-pinned: pre-1.0, gated in CI (resolved by uv)
]

[tool.uv]
# Pin resolution to packages published on/before this absolute date so uv.lock is
# reproducible everywhere. Without it, a user-level uv config's relative
# `exclude-newer = "1 week"` bakes a machine/time-dependent span into the lock,
# which makes `uv sync --locked` fail on CI (where no global uv config exists).
# A committed absolute value overrides the user-level span. Bump deliberately.
exclude-newer = "2026-06-02T00:00:00Z"

[tool.ruff]
line-length = 88
target-version = "py312"   # keep the whole package Pyodide-compatible (see requires-python)
src = ["src", "tests", "tools"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ty.environment]
python-version = "3.12"   # type-check against the supported floor, not the dev version

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
